# privacy-rights-api

./: .env.example  .gitignore  README.md  pyproject.toml
Docs/: SRS.md
ProjectManagement/: ProductBacklog.md  ProjectPlan.md  SprintBoard.md
ProjectManagement/sprint1/: PB-001-project-scaffolding.md  PB-003-async-sqlalchemy-setup.md  PB-005-configuration-management.md  source-control-setup.md
app/: main.py
app/core/: config.py  database.py
app/models/: __init__.py
